# hello-haskell

./: LICENSE  README.md  hello-haskell.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Lib.hs  Main.hs
